src/objects/DCMSS_Devotee__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <description>Address</description>
        <inlineHelpText>Address</inlineHelpText>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments</description>
        <inlineHelpText>Comments</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email</description>
        <inlineHelpText>Email</inlineHelpText>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>First Name</description>
        <inlineHelpText>First Name</inlineHelpText>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Last Name</description>
        <inlineHelpText>Last Name</inlineHelpText>
        <label>Last Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Phone</description>
        <inlineHelpText>Phone</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Spouse_Name__c</fullName>
        <description>Spouse Name</description>
        <inlineHelpText>Spouse Name</inlineHelpText>
        <label>Spouse Name</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Spouse_Phone__c</fullName>
        <description>Spouse Phone</description>
        <inlineHelpText>Spouse Phone</inlineHelpText>
        <label>Spouse Phone</label>
        <type>Phone</type>
    </fields>
</CustomObject>